output/method_names/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestBackRefsWithPolymorphic.java
protected AbstractProperty()
protected AbstractProperty(String name)
protected NestedPropertySheetImpl(String name, PropertySheet propertySheet)
 NestedPropertySheetImpl()
public StringPropertyImpl(String name, String value)
 StringPropertyImpl()
public void testDeserialize() throws IOException
public void testSerialize() throws IOException
 String getEntityType()
 Long getId()
 void setId(Long id)
 void setPersistable()
 PropertySheet getValue()
 void setValue(PropertySheet propertySheet)
 String getName()
 PropertySheet getParentSheet()
 T getValue()
 void setName(String name)
 void setParentSheet(PropertySheet parentSheet)
 void addProperty(Property property)
 Map<String, Property> getProperties()
 void setProperties(Map<String, Property> properties)
 String getValue()
 void setValue(String value)
public String getEntityType()
public Long getId()
public void setId(Long id)
public void setPersistable()
public String getName()
public PropertySheet getParentSheet()
public void setName(String name)
public void setParentSheet(PropertySheet parentSheet)
public PropertySheet getValue()
public void setValue(PropertySheet propertySheet)
public void addProperty(Property property)
public Map<String, Property> getProperties()
public void setProperties(Map<String, Property> properties)
public String getValue()
public void setValue(String value)
